# reinforcement-learning

./: pyproject.toml
multi-armed-bandit/: 01_MAB.ipynb  environment.py
multi-armed-bandit/agentes/: epsilon_greedy.py  gradient.py
multi-armed-bandit/interfaces/: agent.py
multi-armed-bandit/simulacoes/: simulacao_mab.py  tarefa2.py  tarefa3.py
