[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Projeto de aprendizado por reforço com multi-armed bandit."
authors = [
    { name = "Seu Nome", email = "dayana.automacao@gmail.com.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Adicione dependências aqui, por exemplo:
    # "numpy>=1.21.0",
]

[tool.setuptools.packages.find]
where = ["multi-armed-bandit"]
include = [
    "multi-armed-bandit",
    "multi-armed-bandit.agentes",
    "multi-armed-bandit.interfaces",
    "multi-armed-bandit.simulacoes"
]
